--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,11 +7,11 @@
     = javascript_include_tag "http://maps.google.com/maps/api/js?sensor=true"
     = javascript_include_tag 'ba-debug', 'helpers', 'date', 'anytime', 'custom_overlay', 'transport_mode',
       'map_mode', 'map_container', 'event_info_container', 'map_navigation', 'trip', 'jquery-ui-1.8.7.custom.min',
-      'jquery.scrollfollow', 'jquery.scrollTo', 'event_list', 'event_list_item', 'event', 'event_form', 'application', 'rails', 'photos'
+      'jquery.scrollfollow', 'jquery.scrollTo', 'event_list', 'event_list_item', 'event', 'event_form', 'item', 'application', 'rails', 'photos'
     = csrf_meta_tag
   %body{:id => "body-#{controller_name}-#{action_name}", :class => "controller-#{controller_name}"}
-    - if flash[:error].present?
-      #flash{:class => 'error'}= flash[:error]
+    - flash.each do |name, msg|
+      = content_tag :div, msg, :id => "flash-#{name}"
     #header-outer
       #header-wrapper
         #header
