--- a/app/cells/providers/albums.haml
+++ b/app/cells/providers/albums.haml
@@ -1,3 +1,3 @@
 %ul.photo_albums{:id => "#{@provider.code}_albums"}
   - @albums.each do |album|
-    = render :partial => "providers/#{@provider.code}/album", :object => album
+    = render :partial => "providers/album", :object => album
