--- a/app/cells/providers/album.haml
+++ b/app/cells/providers/album.haml
@@ -8,11 +8,18 @@
     - group.each_with_index do |photo, i|
       - class_name = (i == 0 ? 'clear' : '')
       %li.photo{:class => class_name, :id => "photo_#{photo.id}"}
-        .provider_id.hide= @provider.id
-        .album_id.hide= @album.id
-        .title.hide= photo.title
-        .source_url.hide= photo.source_url
-        .source_created_at.hide= photo.source_created_at
-        .image= image_tag photo.thumbnail_url
+        .photo_attributes.hide
+          .provider_id= @provider.id
+          .album_id= @album.id
+          .title= photo.title
+          .source_url= photo.source_url
+          .source_created_at= photo.source_created_at
+          - photo.thumbnails.each do |thumbnail|
+            .thumbnail
+              .thumb_url= thumbnail.url
+              .thumb_width= thumbnail.width.to_s
+              .thumb_height= thumbnail.height.to_s
+
+        .image= image_tag photo.thumbnail_url, :alt => photo.title
         - if photo.title.present?
           %p= photo.title
