Added fancybox to photos. Updated app to jQuery 1.5. Updated rails.js for compatibility with jQuery 1.5

--- a/app/views/items/_mini_item_photo.html.haml
+++ b/app/views/items/_mini_item_photo.html.haml
@@ -1,6 +1,6 @@
 - if (image_url = photo.thumbnail_url).present?
   - large_image_url = photo.image_url(400)
-  = link_to large_image_url do
+  = link_to large_image_url, :rel => 'fancybox' do
     = image_tag image_url
   %p
     = photo.title
