--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,12 +2,15 @@
 %html
   %head
     %title TripForge
+    = stylesheet_link_tag '/fancybox/jquery.fancybox-1.3.4.css'
     = stylesheet_link_tag :all
-    = javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"
+    = javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"
     = javascript_include_tag "http://maps.google.com/maps/api/js?sensor=true"
-    = javascript_include_tag 'ba-debug', 'helpers', 'date', 'anytime', 'custom_overlay', 'transport_mode',
-      'map_mode', 'map_container', 'event_info_container', 'map_navigation', 'trip', 'jquery-ui-1.8.7.custom.min',
-      'jquery.scrollfollow', 'jquery.scrollTo', 'event_list', 'event_list_item', 'event', 'event_form', 'item', 'application', 'rails', 'photos'
+    = javascript_include_tag 'ba-debug', 'helpers', 'date', 'anytime', 'custom_overlay',
+      '/fancybox/jquery.fancybox-1.3.4.js', '/fancybox/jquery.easing.1.3.js', '/fancybox/jquery.mousewheel-3.0.4.js',
+      'transport_mode', 'map_mode', 'map_container', 'event_info_container', 'map_navigation', 'trip', 'jquery-ui-1.8.7.custom.min',
+      'jquery.scrollfollow', 'jquery.scrollTo', 'event_list', 'event_list_item', 'event', 'event_form', 'item', 'application', 'rails', 'photos',
+      
     = csrf_meta_tag
   %body{:id => "body-#{controller_name}-#{action_name}", :class => "controller-#{controller_name}"}
     - flash.each do |name, msg|
