Made creating provider albums asynchronous with trip show page

--- a/app/views/items/_import_photos.haml
+++ b/app/views/items/_import_photos.haml
@@ -6,10 +6,4 @@
       = link_to image_tag("#{provider.code}_small.png", :alt => provider.name), '#photo_provider_tab_'+provider.code
 
 - providers.each do |provider|
-  %div{:id => 'photo_provider_tab_'+provider.code}
-    - if current_user.has_credential_for?(provider)
-      = render_cell :providers, :albums, :provider => provider
-    - else
-      -# show iframe that will connect to the service
-      %iframe{:src => connect_provider_path(provider), :height => 440, :width => 440, :seamless => 'seamless'}
-      -# import_from_provider_story_scene_items_path(:story_id => @scene.story.id, :scene_id => @scene.id, :id => provider)
+  %div{:id => 'photo_provider_tab_'+provider.code, :class => 'photo_provider_area'}    
