--- a/app/views/providers/album.haml
+++ b/app/views/providers/album.haml
@@ -1,1 +1,26 @@
-= render_cell :providers, :album, :provider => @provider, :album_id => @album_id
+%h2
+  = link_to 'All Albums', "#all_albums_#{@provider.code}", :class => 'back_to_all_albums'
+  &gt;
+  = @album.title
+
+%ul.photos
+  - @album.photos.in_groups_of(per_row = 3, false) do |group|
+    - group.each_with_index do |photo, i|
+      - class_name = (i == 0 ? 'clear' : '')
+      %li.photo{:class => class_name, :id => "photo_#{photo.id}"}
+        .photo_attributes.hide
+          .provider_id= @provider.id
+          .album_id= @album.id
+          .title= photo.title
+          .source_url= photo.source_url
+          .source_created_at= photo.source_created_at
+          - if photo.thumbnails.present?
+            - photo.thumbnails.each do |thumbnail|
+              .thumbnail
+                .thumb_url= thumbnail.url
+                .thumb_width= thumbnail.width.to_s
+                .thumb_height= thumbnail.height.to_s
+
+        .image= image_tag photo.thumbnail_url, :alt => photo.title
+        - if photo.title.present?
+          %p= photo.title
