--- a/app/views/providers/albums.haml
+++ b/app/views/providers/albums.haml
@@ -1,7 +1,10 @@
 - if current_user.has_credential_for?(@provider)
-  %ul.photo_albums{:id => "#{@provider.code}_albums"}
-    - @albums.each do |album|
-      = render :partial => "providers/album", :object => album
+  - if @albums.present?
+    %ul.photo_albums{:id => "#{@provider.code}_albums"}
+      - @albums.each do |album|
+        = render :partial => "providers/album", :object => album
+  - else
+    %p No albums
 - else
   -# show iframe that will connect to the service
   %iframe{:src => connect_provider_path(@provider), :height => 440, :width => 440, :seamless => 'seamless'}
