Added google verification meta tag

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,8 +9,9 @@
     = javascript_include_tag 'ba-debug', 'helpers', 'date', 'anytime', 'custom_overlay',
       '/fancybox/jquery.fancybox-1.3.4.js', '/fancybox/jquery.easing.1.3.js', '/fancybox/jquery.mousewheel-3.0.4.js',
       'transport_mode', 'map_mode', 'map_container', 'event_info_container', 'map_navigation', 'trip', 'jquery-ui-1.8.7.custom.min',
-      'jquery.scrollfollow', 'jquery.scrollTo', 'event_list', 'event_list_item', 'event', 'event_form', 'item', 'application', 'rails', 'photos',
-      
+      'jquery.scrollfollow', 'jquery.scrollTo', 'event_list', 'event_list_item', 'event', 'event_form', 'item', 'application', 'rails', 'photos'
+    :plain
+      <meta name="google-site-verification" content="boLChk8SchZxjONCE1VqZgaBonmNzg6mAY9bHG7jzHM" />
     = csrf_meta_tag
   %body{:id => "body-#{controller_name}-#{action_name}", :class => "controller-#{controller_name}"}
     - flash.each do |name, msg|
