--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title TripForge
+    %title TripForge - Create and Share Trips
     = stylesheet_link_tag '/fancybox/jquery.fancybox-1.3.4.css'
     = stylesheet_link_tag :all
     = javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"
